IE11 fix for overflowing flex column

--- a/app/assets/stylesheets/pano/global/_lists.sass
+++ b/app/assets/stylesheets/pano/global/_lists.sass
@@ -100,6 +100,9 @@ ul.inline
   +plain-list
   display: flex !important
   flex-direction: row
+  @media all and (-ms-high-contrast: none), (-ms-high-contrast: active)
+    max-width: 56%
+
   li
     display: flex
     flex-direction: column
